Remove DCHECK(!url.has_ref()); in ServiceWorkerUtils::ScopeMatches()

|url| may have ref when it is called from devtools::service_worker::ServiceWorkerHandler.

BUG=598410

Review URL: https://codereview.chromium.org/1843553002

Cr-Commit-Position: refs/heads/master@{#383678}

Former-commit-id: 2ad8fb5ec36737523c4e878a6adf59dc2a130994